--- a/.htaccess
+++ b/.htaccess
@@ -5,11 +5,11 @@
 # Toute modification des directives entre ces marqueurs sera outrepassée.
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /tutowp/
+RewriteBase /foodog/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /tutowp/index.php [L]
+RewriteRule . /foodog/index.php [L]
 </IfModule>
 
 # END WordPress
